--- a/no3/index.html
+++ b/no3/index.html
@@ -10,7 +10,7 @@
     <body>
         <h1>Pochi the Cat</h1>
 
-        <img src="https://pbs.twimg.com/profile_images/1162685001663574016/fL7vAe5I.jpg" alt="Pochi the Cat" style="width: 200px;height: 200px;" align="right"> 
+        <img src="https://drive.google.com/uc?export=view&id=1qXvg1VPx7Y14le4Z-Bdh-XCP6vmg_osH" alt="Pochi the Cat" style="width: 200px;height: 200px;" align="right"> 
 
         <h2>Introduction</h2>
 
